add execution environment

--- a/src/content/terminal/terminal.css
+++ b/src/content/terminal/terminal.css
@@ -47,7 +47,7 @@ body.terminal-iframe {
     }
 
     .history {
-      max-height: 150px;
+      max-height: 85%;
       overflow: auto;
 
       &::-webkit-scrollbar {
