--- a/src/content/terminal/terminal-window.css
+++ b/src/content/terminal/terminal-window.css
@@ -1,6 +1,6 @@
 div.terminal-wrapper {
+  resize: vertical;
   position: fixed;
-  height: 0px;
   border-width: 0px;
   z-index: 999999999999;
   overflow: hidden;
@@ -8,12 +8,12 @@ div.terminal-wrapper {
   padding: 0;
   border-radius: 0;
   background-color: transparent;
-  overflow: hidden;
 }
 
 div.terminal-wrapper iframe {
+  display: block;
   width: 100%;
-  height: 500px;
+  height: 100%;
   border-width: 0;
   opacity: 0.85;
 }
