--- a/src/content/terminal/terminal.css
+++ b/src/content/terminal/terminal.css
@@ -1,9 +1,20 @@
 body.terminal-iframe {
+  display: block;
   border-width: 0;
   padding: 0;
   margin: 0;
   background-color: #000;
   line-height: 16px;
+
+  #terminal-resizer {
+    position: absolute;
+    right: 20px;
+    top: 5px;
+    cursor: ns-resize;
+    display: block;
+    color: white;
+    border: 1px;
+  }
 
   .close-window {
     position: absolute;
@@ -12,6 +23,7 @@ body.terminal-iframe {
     cursor: pointer;
     display: block;
     color: white;
+    border: 1px;
   }
 
   #terminal-app {
