add more string,link,dom,sites commands

--- a/src/content/terminal/terminal.css
+++ b/src/content/terminal/terminal.css
@@ -97,6 +97,11 @@ body.terminal-iframe {
       }
     }
 
+    .match {
+      color: #69f;
+      text-decoration: underline;
+    }
+    
     .history-preview {
       color: #888888;
     }
